# transformer-representation-analysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  research_journal.md
configs/: base.yaml
configs/experiments/: distilbert.yaml  sentence_bert.yaml
data/: astronomy_sentences.csv
scripts/: analyze_best_layer.py  compare_layer_trajectories.py  extract_layer_embeddings.py  find_token_heads.py  inspect_attention.py  run_full_pipeline.py  run_layer_cka.py  run_layer_class_similarity.py  run_layer_similarity.py  run_layer_visualizations.py  run_similarity_analysis.py  run_visual_analysis.py  summarize_attention_heads.py  visualize_attention.py
src/analysis/: cka.py  layer_similarity.py  pca.py  similarity.py  tsne.py  umap.py
src/extraction/: attention_extractor.py  dataset_embeddings.py  embedding_extractor.py  hidden_states.py  layer_extractor.py
src/models/: load_model.py
src/utils/: cli.py  config_loader.py  logger.py  paths.py  reproducibility.py
src/visualization/: attention.py  scatter.py
tests/: test_config_loader.py  test_dataset_embeddings.py  test_hidden_states.py  test_reproducibility.py  test_similarity.py
